After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 689413 - Crash on drag'n'drop of album cover
Crash on drag'n'drop of album cover
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: general
2.98
Other Linux
: Normal critical
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-12-01 13:11 UTC by Jens Granseuer
Modified: 2012-12-02 23:09 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jens Granseuer 2012-12-01 13:11:50 UTC
If I drop anything on the album cover widget in the toolbar rhythmbox crashes on me with this:

(gdb) bt
  • #0 do_store_request
    at rb-ext-db.c line 880
  • #1 run_in_thread
    at gsimpleasyncresult.c line 869
  • #2 io_job_thread
    at gioscheduler.c line 162
  • #3 g_thread_pool_thread_proxy
    at gthreadpool.c line 309
  • #4 g_thread_proxy
    at gthread.c line 797
  • #5 start_thread
    from /lib64/libpthread.so.0
  • #6 clone
    from /lib64/libc.so.6

880			rb_debug ("stored value into encoded data of type %s", G_VALUE_TYPE_NAME (req->data));

(gdb) p req->data
$1 = (GValue *) 0x0
Comment 1 Jonathan Matthew 2012-12-02 03:34:47 UTC
Works fine for me. What are you dragging, and where are you dragging it from?
Comment 2 Jens Granseuer 2012-12-02 11:06:48 UTC
I just tried two things:

1) drag image from epiphany to widget
2) drag cover from song that has album art away and drop it back on itself

Both cases resulted in said crash. Anything else I can check?
Comment 3 Jonathan Matthew 2012-12-02 23:09:01 UTC
It appears I never tested the code for handling pixbuf drops. Commit 277d5c2 fixes this.