header: don't crash when handling pixbuf drag and drop

https://bugzilla.gnome.org/show_bug.cgi?id=689413